<?xml version="1.0" encoding="utf-8"?>
<!--     Strings -->
<resources>

    <string name="app_name">SealNote</string>
    <string name="app_description">Objective is simple. Provide a quick, simple and <b>safe</b> notepad. Your notes are encrypted using strong 256-bit AES algorithm. No longer worry about losing your private information to malicious people.</string>
    <string name="app_credits"><b>TwistedPlane:</b>\nwww.twistedplane.com\ncontact@twistedplane.com"\n<b>Contributors:</b>\nhttps://github.com/vishesh/sealnote/graphs/contributors</string>

    <!-- Activities -->
    <string name="title_activity_note">" "</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_tags">Edit tags</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_new_note">Create New Note</string>
    <string name="action_save_note">Save</string>
    <string name="action_archive">Archive</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_restore">Restore</string>
    <string name="action_empty_trash">Empty Trash</string>
    <string name="action_color">Color</string>
    <string name="action_logout">Logout</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_edit_tags">Edit tags</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>

    <string name="action_new_generic_note">Plain Text</string>
    <string name="action_new_login_note">Login Details</string>
    <string name="action_new_card_note">Card Details</string>

    <string name="rename">Rename</string>
    <string name="rename_tag">Rename tag</string>
    <string name="delete_tag">Delete tag \"%s\"</string>
    <string name="are_you_sure_delete_tag">Are you sure you want to delete this tag?</string>

    <string name="whitespace_not_allowed">Error. Whitespace not allowed in tags!</string>

    <!-- Note Activity -->
    <string name="note_title">Title</string>
    <string name="note_note">Note</string>
    <string name="empty_note">No point saving an empty note!</string>
    <string name="note_saved">Note saved.</string>
    <string name="note_deleted">Note deleted.</string>
    <string name="note_restored">Note restored.</string>
    <string name="note_archived">Note archived.</string>
    <string name="note_unarchived">Note unarchived.</string>
    <string name="create_a_new_note">Create a New Note</string>

    <!-- Bank Card editor -->
    <string name="note_card_name">Name on Card</string>
    <string name="note_card_number">Card Number</string>
    <string name="note_card_valid_from">Valid From</string>
    <string name="note_card_valid_upto">Valid Upto</string>
    <string name="note_card_cvv">&#160;&#160;&#160;&#160;&#160;&#160;&#160;CVV</string>
    <string name="note_additional_notes">Additional Notes</string>

    <!-- login editor -->
    <string name="note_login_url">Url</string>
    <string name="note_login_name">&#160;&#160;&#160;Login</string>
    <string name="note_login_password">Password</string>

    <!-- color dialog -->
    <string name="msg_pick_color">Pick a color</string>

    <!-- password dialog -->
    <string name="welcome_submessage">Keep notes safe and secure</string>
    <string name="password">Password</string>
    <string name="create_password">Enter a new password</string>
    <string name="show_notes">Show Notes</string>
    <string name="get_started">Get Started</string>
    <string name="invalid_password">Invalid password!</string>
    <string name="go">Go</string>
    <string name="cancel">Cancel</string>

    <!-- Preferences -->
    <string name="pref_catGeneral">General</string>
    <string name="pref_catAppearance">Appearance</string>
    <string name="pref_passwordTimeout">Password timeout</string>
    <string name="pref_passwordTimeoutSummary">Inactivity timeout after which re-login is required.</string>
    <string name="pref_secureWindowTitle">Secure window content</string>
    <string name="pref_secureWindowSummary">Prevent window content from appearing in screenshots, switcher or other non-secure displays.</string>
    <string name="pref_dynamicFontSize">Dynamic font size in cards</string>
    <string name="pref_dynamicFontSizeSummary">Card font size is calculated dynamically as per note content. Requires re-login.</string>
    <string name="pref_autoSave">Autosave notes</string>
    <string name="pref_autoSaveSummary">Automatically save notes. No need to click on save button</string>
    <string name="pref_changePassword">Change Password</string>
    <string name="pref_noteListViewType">Notes view layout</string>
    <string name="pref_noteListViewTypeSummary">Select layout used to show all notes in main screen</string>
    <string name="pref_noteActivityBg">Note editor background</string>
    <string name="pref_noteActivityBgSummary">Fill note editor screen completely with the note\'s tagged color</string>
    <string name="pref_catStorage">Storage</string>
    <string name="pref_backup">Backup</string>
    <string name="pref_restore">Restore</string>

    <!-- change password -->
    <string name="incorrect_old_password">Incorrect old password!</string>
    <string name="password_dont_match">New passwords don\'t match!</string>
    <string name="password_changed_success">Password changed successfully!</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm</string>
    <string name="button_change">Change password</string>
    <string name="please_wait">Please wait&#8230;</string>

    <string name="add_tags">Add tags&#8230;</string>
    <string name="no_tags_found">No tags found!</string>
    <string name="folder_is_empty">%s is empty!</string>

    <string name="version">Version</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="help_and_about"><![CDATA[Help & About]]></string>
    <string name="backup">Backup</string>

    <!-- backup and restore -->
    <string name="info_backup_message">
        <![CDATA[
        An <font color="#cc0000">encrypted backup</font> file will be created using your
        <font color="#259b24"> current password.</font>
        You will be asked same password during <font color="#2a36b1">restore</font>.
        ]]>
    </string>

    <string name="info_restore_message">
        <![CDATA[
        Please open the <font color="#cc0000">encrypted backup</font> file that was created
        by <font color="#259b24">SealNote backup</font>.
        ]]>
    </string>

    <string name="info_restore_message_2">
       <![CDATA[
        Please <font color="#cc00000">enter password</font> that was used to encrypt this backup.
        If the password is correct a <font color="#259b24">button will appear </font>
        to proceed to next step.
        ]]>
    </string>

    <string name="restoring"><![CDATA[ <font color="#269b24">Restoring&#8230;</font> ]]></string>
    <string name="restore_complete_info"><![CDATA[
    Restore was <font color="#269b24">successful.</font> Restart app or go back
    to <font color="#cc0000">login again</font>.
    ]]></string>

    <string name="send_to">Send to</string>
    <string name="backup_complete">Backup complete!</string>
    <string name="backup_error">Backup unsuccessful!</string>
    <string name="restore_complete">Restore complete!</string>
    <string name="restore_error">Restore unsuccessful!</string>
    <string name="restore">Restore</string>
    <string name="pick_backup_file">Pick Backup File</string>
    <string name="start_restore">Start Restore</string>
    <string name="write_a_review">Write a Review</string>
    <string name="backup_permission_error">Backup unsuccessful! Please give storage permission.</string>
    <string name="archive_save_alert">You have unsaved changes? Do you want to save note before archiving?</string>

</resources>
