<?xml version="1.0" encoding="utf-8"?>

<!--
    Preferences for SealNote
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_catGeneral">
        <CheckBoxPreference
                android:key="AutoSave"
                android:title="@string/pref_autoSave"
                android:defaultValue="false"
                android:summary="@string/pref_autoSaveSummary"
                />

        <CheckBoxPreference
                android:key="SecureWindow"
                android:title="@string/pref_secureWindowTitle"
                android:defaultValue="false"
                android:summary="@string/pref_secureWindowSummary"
                />

        <ListPreference
                android:key="PasswordTimeout"
                android:title="@string/pref_passwordTimeout"
                android:dialogTitle="@string/pref_passwordTimeout"
                android:entries="@array/pref_passwordTimeoutValueNames"
                android:entryValues="@array/pref_passwordTimeoutValues"
                android:defaultValue="10000"
                android:summary="@string/pref_passwordTimeoutSummary"
                />

        <com.twistedplane.sealnote.internal.PasswordPreference
            android:title="@string/pref_changePassword"
            android:dialogTitle="@string/pref_changePassword"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_catAppearance">
        <CheckBoxPreference
                android:key="DynamicFontSize"
                android:title="@string/pref_dynamicFontSize"
                android:defaultValue="true"
                android:summary="@string/pref_dynamicFontSizeSummary"
                />
        <CheckBoxPreference
                android:key="MultiColumnGrid"
                android:title="@string/pref_multiColumnGrid"
                android:defaultValue="true"
                android:summary="@string/pref_multiColumnGridSummary"
                />
    </PreferenceCategory>
</PreferenceScreen>