<?xml version="1.0" encoding="utf-8"?>

<!--
    Action Bar for SealnoteActivity
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@android:drawable/ic_menu_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView"/>
          -->

    <item
            android:id="@+id/action_new_note"
            android:icon="@drawable/ic_action_new"
            android:title="@string/action_new_note"
            android:showAsAction="always">

        <menu>
            <item android:id="@+id/action_new_note_generic"
                  android:title="@string/action_new_generic_note"
                    />
            <item android:id="@+id/action_new_note_card"
                  android:title="@string/action_new_card_note"
                    />
            <item android:id="@+id/action_new_note_login"
                  android:title="@string/action_new_login_note"
                    />
        </menu>
    </item>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />

    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:showAsAction="never" />

    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:showAsAction="never" />
</menu>