<?xml version="1.0" encoding="utf-8"?>

<!--
    Contexual Action Bar shown on SealNote Activity during multi-choice mode
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
            android:id="@+id/action_archive"
            android:title="@string/action_archive"
            android:icon="@drawable/ic_action_archive"
            android:showAsAction="always"
            />

    <item
            android:id="@+id/action_unarchive"
            android:title="@string/action_unarchive"
            android:icon="@drawable/ic_action_unarchive_light"
            android:showAsAction="always"
            />

    <item
            android:id="@+id/action_delete"
            android:title="@string/action_delete"
            android:icon="@drawable/ic_action_discard"
            android:showAsAction="always"
            />

    <item
            android:id="@+id/action_restore"
            android:title="@string/action_restore"
            android:showAsAction="always"
            />

</menu>