<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="0dip"
    android:paddingRight="0dip"
    android:paddingTop="0dip"
    android:paddingBottom="0dip">
    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center"
            android:background="@android:color/holo_blue_dark"
            android:contentDescription="@string/app_name"
            />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:gravity="center_horizontal|center_vertical"
                android:fontFamily="sans-serif-light"
                android:textSize="32sp"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                />
    </FrameLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/password_activity_vertical_margin"
            android:layout_marginRight="@dimen/password_activity_horizontal_margin"
            android:layout_marginLeft="@dimen/password_activity_horizontal_margin"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/darkblue"
            />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginRight="@dimen/password_activity_horizontal_margin"
            android:layout_marginLeft="@dimen/password_activity_horizontal_margin"
            android:text="@string/welcome_submessage"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-condensed"
            />
    <EditText
        android:id="@+id/new_password_input"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/password_activity_vertical_margin"
        android:layout_marginBottom="@dimen/password_activity_vertical_margin"
        android:layout_marginRight="@dimen/password_activity_horizontal_margin"
        android:layout_marginLeft="@dimen/password_activity_horizontal_margin"
        android:hint="@string/create_password"/>
    <Button
        android:id="@+id/create_password_button"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:layout_marginRight="@dimen/password_activity_horizontal_margin"
        android:layout_marginLeft="@dimen/password_activity_horizontal_margin"
        android:paddingLeft="28dp"
        android:paddingRight="28dp"
        android:paddingBottom="18dp"
        android:paddingTop="18dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        />
</LinearLayout>