<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:paddingLeft="@dimen/activity_horizontal_margin"
       android:paddingRight="@dimen/activity_horizontal_margin"
        >
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/note_type_card"
            >
        <EditText
                android:id="@+id/note_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_card_name"
                android:typeface="monospace"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textAllCaps="true"
                android:textSize="22sp"
                android:textColor="@color/note_foreground"
                />

        <EditText
                android:id="@+id/note_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/note_card_number"
                android:typeface="monospace"
                android:singleLine="true"
                android:inputType="number"
                android:digits="0123456789- "
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/note_foreground"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_card_valid_from"
                    android:typeface="monospace"
                    android:textAllCaps="true"
                    />

            <EditText
                    android:id="@+id/note_card_valid_from"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:typeface="monospace"
                    android:singleLine="true"
                    android:inputType="number"
                    android:digits="0123456789/"
                    android:textColor="@color/note_foreground"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:text="@string/note_card_valid_upto"
                    android:textAllCaps="true"
                    />

            <EditText
                    android:id="@+id/note_card_valid_upto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:typeface="monospace"
                    android:singleLine="true"
                    android:inputType="number"
                    android:digits="0123456789/"
                    android:textColor="@color/note_foreground"
                    />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:text="@string/note_card_cvv"
                    />
            <EditText
                    android:id="@+id/note_card_cvv"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:typeface="monospace"
                    android:inputType="number"
                    android:singleLine="true"
                    android:maxLength="3"
                    android:textColor="@color/note_foreground"
                    />

            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="0.1" />

            <ImageView
                    android:id="@+id/note_card_brand"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="right|bottom"
                    />
        </LinearLayout>

    </LinearLayout>

    <EditText
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/note_card_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_additional_notes"
            android:background="@android:color/transparent"
            android:paddingTop="@dimen/note_view_vertical_margin"
            android:paddingBottom="@dimen/note_view_vertical_margin"
            android:textSize="20sp"
            android:textColor="@color/note_foreground"
            android:textColorLink="@color/note_foreground"
            android:inputType="textCapSentences|textMultiLine"
            android:autoText="false"
            android:autoLink="all"
            android:linksClickable="true"
            />

</LinearLayout>
