<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for Login Screen -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="0dip"
    android:paddingRight="0dip"
    android:paddingTop="0dip"
    android:paddingBottom="0dip">

    <!-- Header -->
    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center"
            android:background="@android:color/holo_blue_dark"
            android:contentDescription="@string/app_name"
            />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:gravity="center_horizontal|center_vertical"
                android:fontFamily="sans-serif-light"
                android:textSize="32sp"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                />
    </FrameLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/password_activity_vertical_margin"
            android:layout_marginRight="@dimen/password_activity_horizontal_margin"
            android:layout_marginLeft="@dimen/password_activity_horizontal_margin"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/darkblue"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginRight="@dimen/password_activity_horizontal_margin"
            android:layout_marginLeft="@dimen/password_activity_horizontal_margin"
            android:text="@string/welcome_submessage"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-condensed"
            />

    <EditText
        android:id="@+id/password_input"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/password_activity_vertical_margin"
        android:layout_marginBottom="@dimen/password_activity_vertical_margin"
        android:layout_marginRight="@dimen/password_activity_horizontal_margin"
        android:layout_marginLeft="@dimen/password_activity_horizontal_margin"
        android:hint="@string/password"/>

    <!-- Frame Layout with Button and Progress Activity circle. Only one them
         is visible at any point -->
    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="@dimen/password_activity_horizontal_margin"
            android:layout_marginLeft="@dimen/password_activity_horizontal_margin"
            >
        <Button
                android:id="@+id/go_password_button"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_notes"
                style="@style/PasswordLoginButton"
                />
        <ProgressBar
                android:id="@+id/go_password_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                style="?android:attr/progressBarStyle"
                android:layout_gravity="center_horizontal|center_vertical"
                android:visibility="gone"
                />
    </FrameLayout>

</LinearLayout>